# qecc-aware-qml-trainer

./: API_DOCUMENTATION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  Dockerfile.production.advanced  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  FINAL_AUTONOMOUS_SDLC_DEPLOYMENT_REPORT.md  FINAL_AUTONOMOUS_SDLC_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT.md  NOVEL_RESEARCH_BREAKTHROUGH_REPORT.md  PRODUCTION_DEPLOYMENT_FINAL.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START_GUIDE.md  README.md  RESEARCH_FRAMEWORK_GUIDE.md  RESEARCH_PUBLICATIONS.md  advanced_production_deployment_report.json  autonomous_enhanced_validation.py  autonomous_evolution_research_report.json  autonomous_quality_gates_report.json  autonomous_quantum_evolution.py  autonomous_sdlc_quality_report.json  checkpoint_epoch_0.json  checkpoint_epoch_10.json  checkpoint_epoch_5.json  comprehensive_autonomous_quality_gates.py  comprehensive_quality_gates.py  comprehensive_quality_gates_report.json  database-config.json  deploy.py  deploy.sh  deployment_report.json  enhanced_robust_implementation.py  evolution_state_3q_1755733656.pkl  evolution_state_4q_1755733656.pkl  evolution_state_5q_1755733657.pkl  federated_quantum_state_1755733724.pkl  final_deployment_status.json  fix_all_imports.py  fix_imports.py  (+40 more)
docker/: Dockerfile  Dockerfile.production  docker-compose.yml
examples/: basic_example.py  basic_training_example.py  robust_training_example.py  scalable_training_example.py
kubernetes/: deployment.yaml  production-deployment.yaml  service.yaml
(+144 files in other folders)
